// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlacklistPlugins should not render if not open 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`BlacklistPlugins should render a modal 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
    >
      <div
        class="fixed z-50 w-full h-full bg-black opacity-50"
        data-testid="modal__overlay"
      />
      <div
        class="Modal__ModalContainer-sc-1pv7yg7-0 dWPpQp absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
        >
          <button
            class="Button__StyledButton-mdtvtf-0 IdcN w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="sc-gsTCUz jEpOBt"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="relative"
        >
          <div
            class="relative -mx-10 mb-10 -mt-10 h-56"
          >
            <svg
              class="h-full"
            >
              best-plugins-banner.svg
            </svg>
            <div
              class="absolute bottom-0 left-0 mb-10 ml-10"
            >
              <h2
                class="text-5xl font-extrabold leading-tight m-0 text-white"
              >
                Blacklist
              </h2>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mt-1 text-theme-secondary-text"
            >
              ARK is an open-source blockchain ecosystem that provides users with innovate and easy-to-use blockchain thechnologies. Our supportive community, extensive range of products.
            </div>
            <div
              class="mt-8 -mb-6"
            >
              <div
                class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                      role="row"
                    >
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Logo
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Name
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-gsTCUz fJUgCy"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top justify-end"
                        >
                          <div>
                            Category
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-gsTCUz fJUgCy"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--3"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Actions
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlacklistPlugins should render a modal with blacklist 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
    >
      <div
        class="fixed z-50 w-full h-full bg-black opacity-50"
        data-testid="modal__overlay"
      />
      <div
        class="Modal__ModalContainer-sc-1pv7yg7-0 dWPpQp absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
        >
          <button
            class="Button__StyledButton-mdtvtf-0 IdcN w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="sc-gsTCUz jEpOBt"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="relative"
        >
          <div
            class="relative -mx-10 mb-10 -mt-10 h-56"
          >
            <svg
              class="h-full"
            >
              best-plugins-banner.svg
            </svg>
            <div
              class="absolute bottom-0 left-0 mb-10 ml-10"
            >
              <h2
                class="text-5xl font-extrabold leading-tight m-0 text-white"
              >
                Blacklist
              </h2>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mt-1 text-theme-secondary-text"
            >
              ARK is an open-source blockchain ecosystem that provides users with innovate and easy-to-use blockchain thechnologies. Our supportive community, extensive range of products.
            </div>
            <div
              class="mt-8 -mb-6"
            >
              <div
                class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                      role="row"
                    >
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Logo
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Name
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-gsTCUz fJUgCy"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top justify-end"
                        >
                          <div>
                            Category
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-gsTCUz fJUgCy"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                        colspan="1"
                        data-testid="table__th--3"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Actions
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
                      data-testid="TableRow"
                    >
                      <td
                        class="w-16"
                      >
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
                        >
                          <div
                            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
                          >
                            ARK Explorer
                          </div>
                          <div
                            class="inline-flex items-center space-x-2"
                          >
                            <span
                              class="text-theme-secondary-text"
                            >
                              ARK Ecosystem
                            </span>
                            <div
                              class="sc-gsTCUz ppMap"
                              height="15"
                              width="15"
                            >
                              <svg>
                                official-ark-plugin.svg
                              </svg>
                            </div>
                            <div
                              class="sc-gsTCUz cyuCsN"
                              height="16"
                              width="16"
                            >
                              <svg>
                                grant.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end text-theme-secondary-text"
                        >
                          Utility
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
